@@ -23,10 +23,9 @@ Deleting a symlink to a pinboard icon shows a warning
 
 Gtk+ 2.0:
 	- Panel menu appears, but menu item under cursor doesn't highlight
-	- Savebox doesn't highlight leafname (clear selection problem)
 	- Pinboard text background types none/outline don't work
 	- Can't set menu shortcuts to a single key (eg, 'L') (GTK bug)
-	- Eventboxes don't DnD highlight
+	- Eventboxes don't DnD highlight (GTK bug)
 
 Return for 'Do another search' toggles Quiet...
 
