@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+13-Dec-2001
+~~~~~~~~~~~
+More fixes for panel resizing (reported by Stephen Watson).
+Target mode, dragging an unselected item, and auto-selecting an item when
+opening the menu now all work without grabbing the primary selection.
+
 12-Dec-2001
 ~~~~~~~~~~~
 Clicking on an item which is selected, but not part of the primary selection,
